--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.7",
+    "next": "^12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.45.1"
@@ -20,7 +20,7 @@
     "@typescript-eslint/parser": "^5.8.1",
     "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
-    "eslint-config-next": "12.0.7",
+    "eslint-config-next": "^12.0.8",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
