--- a/package.json
+++ b/package.json
@@ -6,20 +6,28 @@
     "build": "next build",
     "export": "next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ./src/**/*.{ts,tsx}",
+    "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.0.5",
+    "@emoji-mart/react": "^1.0.1",
+    "animate.css": "^4.1.1",
+    "clsx": "^1.2.1",
     "consistent-color-generation": "^0.4.0",
+    "emoji-mart": "^5.2.1",
     "emoji-picker-react": "^3.5.1",
     "next": "^12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-outside-click-handler": "^1.3.0",
     "sass": "^1.45.1"
   },
   "devDependencies": {
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
+    "@types/react-outside-click-handler": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "autoprefixer": "^10.4.0",
